# potaga-runtime

./: README.md  pyproject.toml
.github/workflows/: ci.yml
console/: README.frontend.md  README.md  eslint.config.js  index.html  package.json  vite.config.js
console/css/: base.css  components.css  screens.css  shell.css  tokens.css
console/js/: adr-browser.js  api.js  app.js  checkpoint.js  config-editor.js  hydrate.js  modal.js  nav.js  onboarding.js  project-flow.js  routing.js  spec.js  state.js  tasks.js  toast.js
console/manifests/: frontend_additional_screens_manifest.csv  frontend_manifest.csv  frontend_steps_3_5_manifest.csv
console/public/mock/: dashboard-state.json
console/screens/: adrs.html  agents.html  budget.html  conflicts.html  onboarding.html  overview.html  plan.html  projects.html  routing.html  settings.html
eval/: README.md  eval_set.yaml  harness.py
potaga_runtime/: __init__.py  cli.py  config.py  conflicts.py  events.py  gates.py  memory.py  orchestrator.py  plan.py  router.py
potaga_runtime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
potaga_runtime/sessions/: runner.py
potaga_runtime/sessions/adapters/: __init__.py  core.py
potaga_runtime/tools/: sandbox.py
tests/: test_harness.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_runtime.py
