[project]
name = "potaga-runtime"
version = "0.1.0"
description = "Phase-1 reference runtime for the Potaga prompt pack (dispatch path wired end-to-end)"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.34"]
dev = ["pytest>=8"]

[project.scripts]
potaga = "potaga_runtime.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
